2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Hook up my own TikZ documentation. Will merge with graphdrawing later.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Fix stuff that went missing during the rebase (manual merging = teh
	suck). Thank you Mercurial. I already loathe you deeply.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Temporarily add edge bend points/nodes. Add crappy layered algorithm.
	This algorithm will be replaced later. Just versioning my experimental
	crap here.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add helpers for implementing a variety of graph traversal iterators.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Merge pgfgdbeginscope and pgf@gd@beginscope. Use {begin,end}group.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add a new iter.times(n) helper to generate n loops.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Strip redundant semi-colon.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Avoid table corruption in Graph:deleteNode().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add reversal information to Edge:__tostring().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Fix table.remove_values() to remove items with table.remove() instead of
	bla[key] = nil.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Rename Node:degree() to Node:getDegree() to improve the API consistency.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Change the semantics of in/out degree and edge methods.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Allow edges to be reversed. Add in/out degree and edges methods to Node.
	Also, add a new method table.reverse_values() and draw reversed edges
	properly. Algorithms that reverse edges internally need to make sure to
	reset the edge state before handing the altered graph back to TikZ.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Fix typo in the vector class.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>
