@@ -1,5 +1,10 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add utility for adjusting the orientation of a graph. Update vector
+	class.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Hook up my own TikZ documentation. Will merge with graphdrawing later.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
